--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ html {
     scroll-behavior: smooth;
 }  
 body {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     box-sizing: border-box;
 }
 /*==============================
