--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,26 @@ body {
     box-sizing: border-box;
 }
 /*==============================
+           PRELOADER
+===============================*/
+.preloader {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: visible;
+    z-index: 999;
+}
+.hide-preloader {
+    visibility: hidden;
+    z-index: -999;
+}    
+/*==============================
              HOME
 ===============================*/
 #home {
