--- a/CSS/style.css
+++ b/CSS/style.css
@@ -178,15 +178,12 @@ body {
     margin: auto;
     display: grid;
     grid-template-columns: 1.5fr 2.5fr;
-    border-radius: 5px;
 }
 .about-cols .about-desc {
     background-color: rgba(80, 0, 0);
     color: white;
     padding: 15px;
-    border-top: 8px solid white;
-    border-left: 8px solid white;
-    border-bottom: 8px solid white;
+    border: 5px solid white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -245,8 +242,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
-    margin-top: 40px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    margin-top: 35px;
+    box-shadow: 0px 5px 10px 6px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     padding: 30px;
     
@@ -284,14 +281,14 @@ body {
 .css {
     width: 92%;
 }
-.media-q {
-    width: 87%;
-}
 .js {
     width: 72%;
 }
 .jquery {
     width: 70%;
+}
+.php {
+    width: 55%;
 }
 .bootstrap {
     width: 50%;
@@ -404,12 +401,93 @@ body {
     text-decoration: none;
     color: white;
     font-size: 14px;
-    transition: .2s all ease-in-out;
+    transition: .25s ease-in-out;
     background-color: rgb(240, 52, 52);
     padding: 8px 15px;
     border-radius: 3px;
 }
 #work .more a:hover {background-color: rgb(214, 5, 5);}
+/*==============================
+           EDUCATION
+===============================*/
+#education {
+    padding: 80px 0px;
+}
+#education .container {
+    width: 70%;
+    margin: auto;
+}
+#education .container h1 {
+    text-align: center;
+    font-size: 27px;
+    color: rgba(80, 0, 0);
+    letter-spacing: 1px;
+}
+#education .courses {
+    display: grid;
+    grid-gap: 2rem;
+    margin-top: 35px;
+}
+#education .course {
+    display: grid;
+    grid-template-columns: 1.5fr 3.5fr;
+    grid-gap: 1rem;
+    box-shadow: 0px 5px 10px 6px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    overflow: hidden;
+}
+/* #education .active {
+    display: flex;
+    align-items: center;
+    box-shadow: none;
+}
+#education .dot {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(136, 226, 2);
+    border-radius: 100%;
+} */
+#education .during {
+    background-color: rgb(80, 0, 0);
+    color: white;
+    padding: 35px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+#education .during span:nth-child(1) {
+    font-size: 17px;
+}
+#education .during span:nth-child(2) {
+    font-size: 22px;
+    padding-top: 15px;
+}
+#education .course-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 35px 13px;
+}
+#education .course-name h2 {
+    color: rgb(63, 120, 255);
+    font-size: 24px;
+    font-weight: 500;
+}
+#education .course-name  p {
+    color: rgb(133, 133, 133);
+    font-size: 12px;
+    font-weight: 800;
+    padding-top: 8px;
+    letter-spacing: 1px;
+}
+#education .course-name  p a {
+    text-decoration: none;
+    color: rgb(230, 47, 47);
+}
+#education .course-name  p a:hover {
+    text-decoration: underline;
+}
 /*==============================
             CONTACT
 ===============================*/
@@ -696,6 +774,22 @@ footer p2 {
     }
     .item-img {
         height: 30vh;
+    }
+}
+/*==============================
+           EDUCATION
+===============================*/
+
+@media screen and (max-width: 820px) {
+    #education .container {
+        width: 80%;
+    }
+    #education .course {
+        grid-template-columns: 1fr;
+        grid-gap: 0;
+    }   
+    #education .course-name h2 {
+        font-size: 21px;
     }
 }
 /*==============================
