--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,7 +94,7 @@ body {
     margin: 5px;
     background-color: white;
     transition: .4s;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px .6px rgba(0, 0, 0, 0.5);
 }
 .a {width: 65%;}
 .b {width: 80%;}
