--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,7 +129,7 @@ body {
 }
 .mid-section p {
     width: 70%;
-    margin: auto;
+    margin: 0px auto;
     letter-spacing: 1px;
     line-height: 17px;
     font-size: 14px;
