skills section updated

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -152,7 +152,7 @@ body {
     border: 2px solid transparent;
     border-radius: 100%;
     color: white;
-    transition: .2s ease-in-out;
+    transition: .3s ease-in-out;
 }
 .social-contact li .fb {background-color: #3b5998; padding: 12px 18px;}
 .social-contact li .insta {background-color: rgb(251, 57, 88);}
@@ -183,7 +183,7 @@ body {
     background-color: rgba(80, 0, 0);
     color: white;
     padding: 15px;
-    border: 5px solid white;
+    border: 3px solid white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -259,7 +259,7 @@ body {
 .pro-skills li h2{
     font-size: 18px;
     padding-bottom: 15px;
-    letter-spacing: .5px;
+    letter-spacing: .8px;
 }
 .pro-skills li .bar {
     background: #353b48;
@@ -287,11 +287,11 @@ body {
 .jquery {
     width: 70%;
 }
+.typescript {
+    width: 70%;
+}
 .php {
     width: 55%;
-}
-.bootstrap {
-    width: 50%;
 }
 
 /*==============================
