--- a/CSS/style.css
+++ b/CSS/style.css
@@ -333,7 +333,7 @@ body {
 }
 .item-img-sec {overflow: hidden;}
 .item-img-1 {background-image:  url(../imgs/web-1.jpg);}
-.item-img-2 {background-image: url(../imgs/web-2.jpg);}
+.item-img-2 {background-image: url(../imgs/web-2.png);}
 .item-img-3 {background-image: url(../imgs/web-4.jpg);}
 .item-img-4 {background-image: url(../Imgs/web-9.jpg);}
 .item-img-5 {background-image: url(../imgs/web-6.jpg);}
